# AYP2FIX

./: README.md  declaraciones_basicas.cpp  readme.md
clase 1/: hello world.cpp  primer_ejercicio.cpp  sintaxis_basica.cpp
clase 10/: CMakeLists.txt  clase 9.txt  main.cpp
clase 10/include/: pila.h
clase 10/src/: pila.cpp
clase 11/: CMakeLists.txt  lista.cpp  lista.h  main.cpp  nodo.cpp  nodo.h
clase 12/: CMakeLists.txt  main.cpp
clase 12/include/: Lista.h  Nodo.h  Tarea.h
clase 12/src/: Tarea.cpp
clase 13/: CMakeLists.txt  notas_recursion.txt
clase 2/: a.out  compilar.cpp  ejercicio.cpp  makefile  programa  vector.cpp
clase 3/: persona.cpp  persona.h
clase 4/: agenda.cpp  agenda.h  clase 4 notas.cpp  contacto.cpp  contacto.h  notas.txt
clase 5/: clase 5.cpp
clase 6/: CMakeLists.txt  Contacto.cpp  Contacto.h  agenda.csv
clase 6/ayp2_doble_punteros_2c2023-main/: .gitignore  README.md
clase 7/: CMakeLists.txt  Punto.cpp  Punto.h  main.cpp
clase 7 vector dinamico/: CMakeLists.txt  main.cpp  vector.cpp  vector.h
clase 9/: CMakeLists.txt  main.cpp
documentacion/clase 2/: IntroduccionCpp-Compilacion.pptx  IntroduccionCpp-SintaxisBasica.pptx
documentacion/clase 3/: main.cpp
ejercicios de prueba/: area de triangulo.cpp  factorial.cpp  numeros de fibonacci.cpp  numeros primos.cpp  quien gano.cpp
output/: hello world
trabajos practicos/tp0/: CMakeLists.txt  Menu.cpp  (+7 more)
trabajos practicos/tp1_sinTest/: CMakeLists.txt  main.cpp  saveFile.csv
trabajos practicos/tp1_sinTest/include/: Inventario.hpp  Menu.hpp  Vector.hpp
trabajos practicos/tp1_sinTest/src/: Inventario.cpp  Menu.cpp
trabajos practicos/tp2_sinTest/: CMakeLists.txt  main.cpp  save_file.csv
trabajos practicos/tp2_sinTest/include/: Inventario.hpp  Menu.h  cola_eventos.h  lista_de.hpp
trabajos practicos/tp2_sinTest/src/: Inventario.cpp  Menu.cpp  cola_eventos.cpp
(+23 files in other folders)
